--- a/Styles/styles.css
+++ b/Styles/styles.css
@@ -158,4 +158,42 @@ ul li{
 .lead-form{
     display: flex;
     margin: 120px 150px 134px 150px;
+    justify-content: space-between;
+    gap: 20px;
+
+}
+
+.secondary-color action-text{
+    margin: 200px  200px  ;
+}
+
+.input-title{
+
+    margin: none; 
+}
+
+.input-fill{
+
+    border-radius: 5px;
+    background-color: white;
+    width: 300px;
+    height: 70px;
+
+    
+
+
+}
+
+.btn-second{
+
+     background-color:#4E47FF ;
+    font-weight: bold;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    color:#FFFFFF ;
+    padding: 13px 36px;
+    width: 300px;
+
+    
 }
